--- a/Nueva carpeta/index.html
+++ b/Nueva carpeta/index.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                 <a class="nav-link" href="#catalogo">Catalogo</a>
                 </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#content">Articulos</a>
+                </li>
             </ul>
             </div>
         </div>
